--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -128,8 +128,11 @@ li {
   height: var(--day-label-size);
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 700px) {
 
+  .calendar-day {
+    min-height: 80px;
+  }
   /* #days-of-week li {
     font-size: 0;
   }
