--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -70,12 +70,18 @@ li {
 
 #present-month-selector {
   margin: 0 6px 0 6px;
+  border-bottom: 0.1em solid var(--white);
+  transition: all 0.4s;
+}
+
+#present-month-selector:hover {
+  border-bottom: 0.1em solid var(--grey-300);
 }
 
 .button {
   display: inline-block;
   padding: 0.5em 1em;
-  border: 0.1em solid var(--black);
+  border: 0.1em solid var(--grey-300);
   border-radius: 0.15em;
   box-sizing: border-box;
   text-decoration: none;
@@ -84,11 +90,11 @@ li {
   text-align: center;
   background-color: var(--white);
   outline: none;
-  transition: all 0.2s;
+  transition: all 0.4s;
 }
 
 .button:hover {
-  border: 0.1em solid var(--grey-300);
+  border: 0.1em solid var(--grey-200);
   color: var(--white);
   background-color: var(--grey-800);
 }
@@ -174,4 +180,40 @@ li {
   #days-of-week > li abbr:after {
     content: attr(title);
   } */
+}
+
+/* Animations */
+.boing-boing {
+  animation: bouncy 5s infinite linear;
+  position: relative;
+}
+
+@keyframes bouncy {
+  0% {
+    top: 0em;
+  }
+  
+  40% {
+    top: 0em;
+  }
+
+  43% {
+    top: -0.9em;
+  }
+
+  46% {
+    top: 0em;
+  }
+
+  48% {
+    top: -0.4em;
+  }
+
+  50% {
+    top: 0em;
+  }
+
+  100% {
+    top: 0em;
+  }
 }
