--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -7,18 +7,18 @@ body {
   --grey-800: #3e4e63;
   --black: #000000;
   --white: #FFFFFF;
-  --grid-gap: 1px;
-  --day-label-size: 20px;
+  --grid-gap: 0.07rem; /* 1px */
+  --day-label-size: 1.25rem;
 }
 
 .header {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 0.9rem;
 }
 
 .header h2 {
   color: var(--grey-800);
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
 }
 
 .header .info {
@@ -41,27 +41,27 @@ li {
 .calendar-month {
   position: relative;
   background-color: var(--grey-200);
-  border: solid 1px var(--grey-200);
+  border: solid 0.1rem var(--grey-200);
 }
 
 .calendar-month-header {
   display: flex;
   justify-content: space-between;
   background-color: #fff;
-  padding: 10px;
+  padding: 0.7rem;
 }
 
 .calendar-month-header-selected-month {
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: 600;
-  letter-spacing: 3px;
+  letter-spacing: 0.12em;
 }
 
 .calendar-month-header-selectors {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 170px;
+  width: 10.5rem;
 }
 
 .calendar-month-header-selectors > * {
@@ -69,20 +69,20 @@ li {
 }
 
 #present-month-selector {
-  margin: 0 6px 0 6px;
-  border-bottom: 0.1em solid var(--white);
+  margin: 0 0.37rem 0 0.37rem;
+  border-bottom: 0.1rem solid var(--white);
   transition: all 0.4s;
 }
 
 #present-month-selector:hover {
-  border-bottom: 0.1em solid var(--grey-300);
+  border-bottom: 0.1rem solid var(--grey-300);
 }
 
 .button {
   display: inline-block;
-  padding: 0.5em 1em;
-  border: 0.1em solid var(--grey-300);
-  border-radius: 0.15em;
+  padding: 0.5rem 0.7rem;
+  border: 0.1rem solid var(--grey-300);
+  border-radius: 0.15rem;
   box-sizing: border-box;
   text-decoration: none;
   font-weight: 300;
@@ -94,17 +94,17 @@ li {
 }
 
 .button:hover {
-  border: 0.1em solid var(--grey-200);
+  border: 0.1rem solid var(--grey-200);
   color: var(--white);
   background-color: var(--grey-800);
 }
 
 .day-of-week {
   color: var(--grey-800);
-  font-size: 18px;
+  font-size: 1.125em;
   background-color: #fff;
-  padding-bottom: 5px;
-  padding-top: 10px;
+  padding-bottom: 0.2em;
+  padding-top: 0.55em;
 }
 
 .day-of-week,
@@ -115,7 +115,7 @@ li {
 
 .day-of-week > * {
   text-align: right;
-  padding-right: 5px;
+  padding-right: 0.30rem;
 }
 
 .days-grid {
@@ -123,16 +123,16 @@ li {
   position: relative;
   grid-column-gap: var(--grid-gap);
   grid-row-gap: var(--grid-gap);
-  border-top: solid 1px var(--grey-200);
+  border-top: solid 0.07rem var(--grey-200);
 }
 
 .calendar-day {
   position: relative;
-  min-height: 100px;
-  font-size: 16px;
+  min-height: 6.25rem;
+  /* font-size: 16px; */
   background-color: #fff;
   color: var(--grey-800);
-  padding: 5px;
+  padding: 0.31rem;
 }
 
 .calendar-day--not-current {
@@ -141,8 +141,8 @@ li {
 }
 
 .calendar-day--today {
-  padding-top: 4px;
-  border: 1px solid var(--grey-800);
+  padding-top: 0.25rem;
+  border: 0.07rem solid var(--grey-800);
 }
 
 .calendar-day--today > span {
@@ -156,15 +156,15 @@ li {
   justify-content: center;
   align-items: center;
   position: absolute;
-  right: 2px;
+  right: 0.125rem;
   width: var(--day-label-size);
   height: var(--day-label-size);
 }
 
-@media all and (max-width: 700px) {
+@media all and (max-width: 37.5rem) {
 
-  .calendar-month-header-selected-month {
-    font-size: 16px;
+  * {
+    font-size: 14px;
   }
 
   .calendar-day {
@@ -190,30 +190,30 @@ li {
 
 @keyframes bouncy {
   0% {
-    top: 0em;
+    top: 0rem;
   }
   
   40% {
-    top: 0em;
+    top: 0rem;
   }
 
   43% {
-    top: -0.9em;
+    top: -0.9rem;
   }
 
   46% {
-    top: 0em;
+    top: 0rem;
   }
 
   48% {
-    top: -0.4em;
+    top: -0.4rem;
   }
 
   50% {
-    top: 0em;
+    top: 0rem;
   }
 
   100% {
-    top: 0em;
+    top: 0rem;
   }
 }
