--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -149,6 +149,7 @@ li {
   color: #fff;
   border-radius: 9999px;
   background-color: var(--grey-800);
+  padding: 0.25rem;
 }
 
 .calendar-day > span {
@@ -159,6 +160,26 @@ li {
   right: 0.125rem;
   width: var(--day-label-size);
   height: var(--day-label-size);
+}
+
+/*
+* This event- classes are for displaying / hiding the event-flag.
+* Basically an indicator to know if a given day has an event.
+*/
+.event-flag {
+  display: none;
+}
+
+.event-active {
+  display: flex;
+  /* justify-content: start; */
+  /* align-items: flex-start; */
+  position: absolute;
+  left: 0.2rem;
+  color: #fff;
+  border-radius: 9999px;
+  background-color: green;
+  padding: 0.25rem; 
 }
 
 @media all and (max-width: 37.5rem) {
@@ -174,6 +195,10 @@ li {
 
   .calendar-day {
     min-height: 5rem;
+  }
+
+  .calendar-day--today > span {
+    padding: 0.15rem;
   }
 
   /* This is to change the weekday, for example MON -> M */
