--- a/src/styles/modalbox.css
+++ b/src/styles/modalbox.css
@@ -1,30 +1,96 @@
+:root {
+    --input-border: #8b8a8b;
+    --input-focus-h: 214;
+    --input-focus-s: 37%;
+    --input-focus-l: 75%;   
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .modal {
     display: none;
     position: fixed;
     z-index: 1;
+    /* padding: 2rem; */
     padding-top: 80px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    /* background-color: rgb(0,0,0); */
     background-color: rgb(0,0,0,0.4);
 }
 
 .modal-content {
+    width: 500px;
+    max-width: 100%;
+    height: 400px;
+    max-height: 100%;
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    border-radius: 5%;
 }
-  
+
+.label {
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1;
+    margin: 2rem 0.2rem 0 2rem;
+    letter-spacing: 1px;
+}
+
+.input {
+    font-size: 16px;
+    font-size: max(16px, 1em);
+    font-family: inherit;
+    padding: 0.25em 0.5em;
+    margin: 1.5rem 0 0 0;
+    background-color: #fff;
+    border: 2px solid var(--input-border);
+    border-radius: 4px;
+    transition: 180ms box-shadow ease-in-out;
+}
+
+.input textarea {
+    padding: 0.5em 0.5em;
+}
+
+.input:focus {
+    box-shadow: 0 0 0 2px
+      hsla(
+        var(--input-focus-h),
+        var(--input-focus-s),
+        var(--input-focus-l),
+        0.8
+      );
+}
+
+.description {
+    display: block;
+}
+
+.description-textarea {
+    margin: 1rem 2rem 0 2rem;
+    width: 14.3rem;
+    height: 8rem;
+}
+
+textarea.input {
+    resize: vertical;
+}
+
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: 22px;
+    margin: 0.8em 1em;
     font-weight: bold;
+    transition: all 0.2s ease;
 }
   
 .close:hover,
