--- a/src/styles/modalbox.css
+++ b/src/styles/modalbox.css
@@ -17,7 +17,7 @@
     position: fixed;
     z-index: 1;
     /* padding: 2rem; */
-    padding-top: 80px;
+    padding-top: 5rem;
     left: 0;
     top: 0;
     width: 100%;
@@ -27,9 +27,9 @@
 }
 
 .modal-content {
-    width: 500px;
+    width: 31.25rem;
     max-width: 100%;
-    height: 400px;
+    height: 25rem;
     max-height: 100%;
     background-color: #fefefe;
     margin: auto;
@@ -40,9 +40,9 @@
 /* New style */
 .input-field {
     position: relative;
-    width: 250px;
-    height: 44px;
-    line-height: 44px;
+    width: 15.6rem;
+    height: 2.7rem;
+    line-height: 2.7rem;
     margin-left: 2rem;
 }
 
@@ -78,7 +78,7 @@
 }
 
 .input:focus ~ .label-i {
-    top: -20px;
+    top: -1.25rem;
 }
 
 .block-level {
@@ -94,7 +94,7 @@ textarea {
     line-height: 1;
     margin: 1.5rem 0.2rem 0 2rem;
     position: absolute;
-    top: 146px;
+    top: 9.1rem;
     transition: 180ms all ease-in;
 }
 
@@ -121,7 +121,7 @@ textarea {
 }
 
 .textarea:focus ~ .label {
-    top: 133px;
+    top: 8.3rem;
 }
 
 .close::before {
@@ -130,7 +130,7 @@ textarea {
     color: #aaaaaa;
     position: relative;
     top: 0.5em;
-    left: 20em;
+    left: 20.4em;
     padding: 5px 12px 8px 12px;
     width: 1.8em;
     height: 1.8em;
@@ -151,8 +151,8 @@ textarea {
         width: 21rem;
     }
 
-    .input {
-        width: 80%;
+    .textarea:focus ~ .label {
+        top: 8.6rem;
     }
     
     .close::before {
