--- a/src/styles/modalbox.css
+++ b/src/styles/modalbox.css
@@ -114,6 +114,7 @@
     width: 17.3rem;
     height: 8rem;
     background-color: #f4f7fa;
+    outline: none;
     transition: 180ms all ease-in;
 }
 
@@ -152,7 +153,20 @@
     background-color: #fff;
     border: 2px solid var(--input-border);
     border-radius: 4px;
-    transition: 180ms box-shadow ease-in-out;
+    outline: none;
+    transition: 180ms box-shadow ease-in;
+}
+
+
+.input-duedate:focus {
+    box-shadow: 0 0 0 2px
+    hsla(
+      var(--input-focus-h),
+      var(--input-focus-s),
+      var(--input-focus-l),
+      0.8
+    );
+    
 }
 
 .close::before {
