feat: more functionality for event input

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -178,8 +178,8 @@ li {
   left: 0.2rem;
   color: #fff;
   border-radius: 9999px;
-  background-color: green;
-  padding: 0.25rem; 
+  background-color: rgb(98, 173, 98);
+  padding: 0.25rem 0.50rem; 
 }
 
 @media all and (max-width: 37.5rem) {
@@ -199,6 +199,10 @@ li {
 
   .calendar-day--today > span {
     padding: 0.15rem;
+  }
+
+  .event-active {
+    padding: 0.10rem 0.25rem;
   }
 
   /* This is to change the weekday, for example MON -> M */
