--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -178,13 +178,11 @@ li {
 }
 
 .event-active {
-  display: flex;
-  /* justify-content: start; */
-  /* align-items: flex-start; */
+  display: inline;
   position: absolute;
   left: 0.2rem;
   color: #fff;
-  border-radius: 9999px;
+  border-radius: 50%;
   background-color: rgb(98, 173, 98);
   padding: 0.25rem 0.50rem; 
 }
@@ -198,42 +196,6 @@ li {
 
 .display-error {
   opacity: 1;
-}
-
-
-
-@media all and (max-width: 37.5rem) {
-
-  * {
-    font-size: 14px;
-  }
-
-  .calendar-month-header-selected-month {
-    font-size: 1em;
-    margin-top: 0.8em;
-  }
-
-  .calendar-day {
-    min-height: 5rem;
-  }
-
-  .calendar-day--today > span {
-    padding: 0.15rem;
-  }
-
-  .event-active {
-    padding: 0.10rem 0.25rem;
-  }
-
-  /* This is to change the weekday, for example MON -> M */
-  
-  /* #days-of-week li {
-    font-size: 0;
-  }
-  
-  #days-of-week > li abbr:after {
-    content: attr(title);
-  } */
 }
 
 /* Animations */
@@ -270,4 +232,39 @@ li {
   100% {
     top: 0rem;
   }
+}
+
+@media all and (max-width: 37.5rem) {
+
+  * {
+    font-size: 14px;
+  }
+
+  .calendar-month-header-selected-month {
+    font-size: 1em;
+    margin-top: 0.8em;
+  }
+
+  .calendar-day {
+    min-height: 5rem;
+  }
+
+  .calendar-day--today > span {
+    padding: 0.15rem;
+  }
+
+  .event-active {
+    padding: 0.10rem 0.4rem;
+    top: 3.3rem;
+  }
+
+  /* This is to change the weekday, for example MON -> M */
+  
+  /* #days-of-week li {
+    font-size: 0;
+  }
+  
+  #days-of-week > li abbr:after {
+    content: attr(title);
+  } */
 }
